<resources>
    <string name="app_name">Landview</string>
    <string name="welcome">Welcome to LandView</string>
    <string name="Text_intro">Traveling helps one to understand,they are not actually lost.</string>
    <string name="btn_Login">Sign In</string>
    <string name="btn_signup">Sign up</string>
    <string name="CreateAccount">Create Account</string>
    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="type_Password">Type Password Again</string>
    <string name="policy">I agree all Terms and Conditions</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_yourAccount">Login to your account</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="dont_account">Do not have an account yet?</string>
    <string name="sigup_now">Sign up now</string>
    <string name="login_with">Or login with</string>
    <string name="FragmentHome">Home</string>
    <string name="fragmentTravel">Travel</string>
    <string name="fragmentFavorite">Favorite</string>
    <string name="emptyFavorite">Look like you did not add any favourite place yet</string>
    <string name="fragmentUser">User</string>
    <string name="hintSearch">Search Destination</string>
    <string name="planName">Name your plan</string>
    <string name="planDescription">Description (optional)</string>
    <string name="What_want">What do you want?</string>
    <string name="news">News</string>
    <string name="Plan">Plan your trip</string>
    <string name="search">Search</string>
    <string name="recent">Recent Search</string>
    <string name="hoguom">Hồ Gươm - Hà Nội</string>
    <string name="hoguom_address">Phường Hoàng Trống,Quận Hoàn Kiếm,Hà Nội</string>
    <string name="hoguom_address_detail">Địa chỉ: phường Hoàng Trống,quận Hoàng Kiếm,Hà Nội</string>
    <string name="bienbaitrac">Biển Bãi Trước</string>
    <string name="textDesHaNoi">Hồ Hoàn Kiếm là hồ nước ngọt nhân tạo nằm giữa thủ đô Hà Nội. Hồ rộng tới 12ha với chiều dài 700m, rộng 200m và sâu hơn 1m. Giữa hồ có tháp rùa, trên hồ có đền Ngọc Sơn,
        xung quanh là cầu Thê Húc, tháp Bút và đền Bà Kiệu.</string>
    <string name="textDesDaLat">Đà Lạt hiện nay là thành phố nổi tiếng về du lịch bậc nhất của Việt Nam. Ai cũng đã từng nghe và biết về thành phố ngàn hoa mộng mơ.</string>
    <string name="textDesVungTau">Vũng Tàu là một thành phố thuộc tỉnh Bà Rịa – Vũng Tàu, ở vùng Đông Nam Bộ, Việt Nam. Đây là trung tâm kinh tế, tài chính, văn hóa, du lịch, giao thông - vận tải và giáo dục và là một trong những trung tâm kinh tế của vùng Đông Nam Bộ</string>
    <string name="textDesDaNang">Đà Nẵng là một thành phố trực thuộc trung ương, nằm trong vùng Duyên hải Nam Trung Bộ Việt Nam, là thành phố trung tâm và lớn nhất khu vực miền Trung - Tây Nguyên.</string>
    <string name="top_review">Top review</string>
    <string name="suggest_place">Suggest Place</string>
    <string name="hotel">Khách sạn</string>
    <string name="restaurant">Nhà hàng</string>
    <string name="web"><u>Truy cập web</u></string>
    <string name="call"><u>Gọi</u></string>
    <string name="email_Under"><u>Email</u></string>
    <string name="more"><u>Xem thêm</u></string>
    <string name="read_more"><u>Đọc thêm</u></string>
    <string name="see_more"><u>Xem thêm</u></string>

    <string name="terms_of_services_1">Please read these Terms of Service <b>(Terms", "Terms of Service")</b> carefully before using <b>thehttp://www.landv.com</b> website (the "Service") operated by <b>LandV, Inc.</b>(<b>us</b>, <b>we</b>, or <b>our</b>).</string>
    <string name="terms_of_services_2">Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</string>
    <string name="terms_of_services_3">By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</string>
    <string name="terms_of_services_4">Termination clause for websites that do not have accounts. If your website or mobile app allows users to register and have an account.</string>
    <string name="terms_of_services_5">We may terminate or suspend access to our Service immediately, without prior notice or liability. for any reason whatsoever, including without limitation if you breach the Terms.</string>
    <string name="terms_of_services_6">All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="change_password">Change Password</string>
    <string name="hotel_utilities">Utilities</string>
    <string name="plans">Your Plans</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>