<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:fontFamily="@font/scheherazade_bold"
                android:textColor="@color/text_desColor"
                android:textSize="40sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_yourAccount"
                android:fontFamily="@font/scheherazade_bold"
                android:textSize="23sp"
                android:textColor="@color/login_withColor"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-15dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:contentDescription="@string/userName"
                android:layout_height="40dp"
                android:src="@drawable/user"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:src="@drawable/logo_login"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtEmail_login"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_editext"
        android:hint="@string/email_hint"
        android:autofillHints="emailAddress"
        android:gravity="center_vertical"
        android:paddingStart="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtPass_login"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_editext"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:gravity="center_vertical"
        android:paddingStart="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtForgot_password"
        android:fontFamily="@font/scheherazade_bold"
        android:text="@string/forgot_pass"
        android:textColor="@color/primary_color"
        android:textSize="23sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"/>
    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bottom"
        android:text="@string/btn_Login"
        android:backgroundTint="@color/primary_color"
        android:id="@+id/btn_Login"
        android:fontFamily="@font/scheherazade_bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/scheherazader"
            android:text="@string/dont_account"
            android:textSize="20sp"
            android:layout_marginEnd="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignupNow"
            android:fontFamily="@font/scheherazade_bold"
            android:textColor="@color/primary_color"
            android:text="@string/sigup_now"
            android:textSize="20sp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/login_withColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with"
            android:fontFamily="@font/scheherazader"
            android:textColor="@color/login_withColor"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facebook_login"
            android:src="@drawable/fb_logo"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gg_login"
            android:src="@drawable/gg_logo"
            android:layout_marginTop="1.5dp"/>
    </LinearLayout>
</LinearLayout>