<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".TermsOfServices">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terms of Services"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_scrollview"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms of Service ('Terms')"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Last updated: 28/11/2021"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_of_services_1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_of_services_2"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_of_services_3"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_of_services_4"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Termination"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_of_services_5"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_of_services_6"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_regular"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>