<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/change_password"
        android:textColor="@color/text_desColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOldPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/old_password"
        android:textColor="@color/text_desColor"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtOldPass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_editext"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOldPass" />

    <TextView
        android:id="@+id/txtNewPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/new_password"
        android:textColor="@color/text_desColor"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtOldPass" />

    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_editext"
        android:paddingStart="10dp"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewPass" />

    <TextView
        android:id="@+id/txtRepeatNewPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/re_enter_new_password"
        android:textColor="@color/text_desColor"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPass" />

    <EditText
        android:id="@+id/edtRepeatNewPass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_editext"
        android:paddingStart="10dp"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRepeatNewPass" />

    <android.widget.Button
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bottom"
        android:backgroundTint="@color/primary_color"
        android:fontFamily="@font/lato_bold"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRepeatNewPass" />



</androidx.constraintlayout.widget.ConstraintLayout>