<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:layout_gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/img_Title"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tittle_app" />

    <TextView
        android:id="@+id/txt_DesIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_Title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/scheherazade_bold"
        android:text="@string/Text_intro"
        android:textColor="@color/text_desColor"
        android:textSize="25sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_DesIntro">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/img_PlaneLaucher"
            android:src="@drawable/plane"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:paddingStart="30dp"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:layout_marginBottom="40dp">
            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:id="@+id/btn_Login"
                android:background="@drawable/custom_bottom"
                android:backgroundTint="@color/primary_color"
                android:text="@string/btn_Login"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textAllCaps="false"
                android:fontFamily="@font/scheherazade_bold"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"/>
            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/btn_signup"
                android:background="@drawable/custom_bottom"
                android:backgroundTint="@color/white"
                android:text="@string/btn_signup"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/scheherazader"
                android:textColor="@color/primary_color"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>