<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".HaNoiDetail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imgHanoi"
                    android:src="@drawable/hoguom1"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hồ Gươm"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/nameHanoi"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desHanoi"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="Hà Nội nằm ở tả ngạn sông Đà và hai bên đồng bằng sông Hồng. Phía Bắc giáp với tỉnh Vĩnh Phúc và Thái Nguyên, phía Nam giáp tỉnh Hòa Bình, phía Đông giáp với tỉnh Bắc Ninh và Hưng Yên, còn phía Tây giáp tỉnh Vĩnh Phúc"
                />
            <android.widget.Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_find"
                android:id="@+id/btnFindPlace"
                android:backgroundTint="@color/primary_color"
                android:text="Find place"
                android:layout_gravity="right"
                android:textColor="@color/white"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hotel"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more"
                    android:id="@+id/seemore"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/rcvhotel"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/rcvRestaurant"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>